MESSAGE(STATUS "CREATE RDO_PLUGIN_GAME5 UTILITY")

FIND_PACKAGE(Boost COMPONENTS program_options thread REQUIRED)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FILE(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp;*.h)

ADD_EXECUTABLE(game5_gen
    ${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES(game5_gen
    ${Boost_PROGRAM_OPTIONS_LIBRARY}
    ${Boost_THREAD_LIBRARY}
)
